[tool.poetry]
name = "kslib"
version = "0.1.37"
description = "kslib: Library by K.Sonoda"
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
license = "MIT"
readme = "README.md"
include = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
scipy = "^1.8.0"
bitarray = "^2.7.3"
bitstring = "^4.0.2"
sympy = "^1.12"
acoustics = "^0.2.6"
ipython = "^8.14.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.5.1"
japanize-matplotlib = "^1.1.3"
SoundFile = "^0.10.3"
ipykernel = "^6.9.0"
SciencePlots = "^1.0.9"
Pillow = "9.0.0"
ipython = "^8.0.1"
jupyter-contrib-nbextensions = "^0.5.1"
#crying-vegetable = {git = "https://github.com/helmenov/crying_vegetable", rev = "main"}
pandas = "^1.4.0"

[tool.poetry.group.dev.dependencies]
kogi = "^0.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
